# CM2290-WifiLed-demo

./: README.md  mqtt-led-client  wifi_led_0.1.bb
config/: hostapd.conf  mosquitto.conf
doc/: CM2290-WifiLed-demo-doc.docx  video_description.txt
wifi_led/: CMakeLists.txt  led_test.cpp  mqtt_control.cpp  mqtt_control.hpp
